fix z-index/overflow bug and some minor style warts

--- a/src/Ability/Ability.css
+++ b/src/Ability/Ability.css
@@ -3,7 +3,7 @@
     position: relative;
 
     .mock-ability-header {
-        padding: 2.2rem 2.5rem;
+        padding: 2.2rem 2.5rem 1.2rem 2.5rem;
         display: flex;
         line-height: 1;
         z-index: 1;
@@ -123,7 +123,7 @@
         padding: 0 1.5rem 1rem 1.5rem;
 
         .mock-details {
-            padding: 0 0 0.9rem 0;
+            padding: 1rem 0 0.9rem 0;
 
             .mock-editable-markdown, .mock-grid {
                 .mock-text {
