--- a/src/Animated/AnimatedDiv.css
+++ b/src/Animated/AnimatedDiv.css
@@ -1,5 +1,4 @@
 .mock-animated-div {
     transition: height 0.3s cubic-bezier(.35,.06,.4,1);
     height: 0;
-    overflow: hidden;
 }
